-Add function county_zoom_choropleth, which allows you to zoom in on counties, not states. If 
an individual county is specified, render it with no fill color.
-Updated and corrected the values of df_president. Thank you to Richard Careaga.
-Update vignettes about US maps. Specifically, provide information about custom scales to include warning about interactions with insets of AK and HI.

choroplethr 2.0.0
----------------------------------------------------------------

-Move the maps and their helper data.frames to a separate package, choroplethrMaps
-Change dependencies (remove dependencies on maps, grid, plyr->dplyr, add R6, add WDI)
-Create R6 objects to simplify map creation
  -Base Choropleth object
	-CountryChoropleth inherits directly from Choropleth
	-Create USAChoropleth object to handle similar issues for all USA maps, such as insets and state boundaries
	-StateChoropleth, CountyChoropleth, ZipMap all inherit from those USAChoropleth
	-From a user's perspective, the only important functions on Choropleth are: new()/initialize() and render(). 
	-From a developer's perspective, you care about three additional functions: clip(), discretize() and bind(). If you are using choroplethr as a framework to create your own choropleth, you might want to override those functions.  Those functions are all called by prepare_map(). So in some sense, you just need to care about prepare_map() and render().
-Create helper functions for creating the 4 maps.  See ?state_choropleth, ?county_choropleth, ?zip_map, ?country_choropleth for details. Importantly, all those functions have the five exact same parameters, four of which are optional.
-Remove some functions that I think no one was using (see NAMESPACE diff for details)
-Change some parameters on choroplethr_acs for consistency.
-Break up the "data(choroplethr)" object. Now just say the object you actually want (e.g. "data(df_pop_state)"). This makes maintenance much easier.