@@ -1,11 +1,13 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
+export(Admin1Choropleth)
 export(CountryChoropleth)
 export(CountyChoropleth)
 export(CountyZoomChoropleth)
 export(StateChoropleth)
 export(USAChoropleth)
 export(ZipMap)
+export(admin1_choropleth)
 export(choroplethr)
 export(choroplethr_acs)
 export(choroplethr_animate)
@@ -23,6 +25,7 @@ importFrom(acs,acs.fetch)
 importFrom(acs,estimate)
 importFrom(acs,geo.make)
 importFrom(acs,geography)
+importFrom(choroplethrMaps,get_admin1_map)
 importFrom(dplyr,left_join)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotation_custom)
